# gh-summary

./: LICENSE  README.md  pyproject.toml
src/gh_summary/: __init__.py  __main__.py  commit.py  constant.py  pdf.py  pr.py
